sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:9: error: type mismatch;
 found   : Double
 required: Int
        if (plusPetit(rg+1,rg)) {
                        ^AlgBubbleSort1:9: error: type mismatch;
 found   : Double
 required: Int
        if (plusPetit(rg+1,rg)) {
                           ^AlgBubbleSort1:10: error: type mismatch;
 found   : Double
 required: Int
          echange(rg,rg+1)
                  ^AlgBubbleSort1:10: error: type mismatch;
 found   : Double
 required: Int
          echange(rg,rg+1)
                       ^AlgBubbleSort1:13: error: value =- is not a member of Double
          rg=-1
            ^